[gd_scene load_steps=10 format=4 uid="uid://cenxxd8t4m6fq"]

[ext_resource type="Script" uid="uid://botrxsvwyqq4u" path="res://scripts/ui/main_menu.gd" id="1_m1kxf"]
[ext_resource type="TileSet" uid="uid://5ovepoc8woop" path="res://assets/tileset.tres" id="1_sl1te"]
[ext_resource type="Texture2D" uid="uid://c4cnmykq1b2n1" path="res://assets/textures/ui/title.png" id="2_fe2o3"]
[ext_resource type="FontFile" uid="uid://b83lr4reqbm0y" path="res://assets/fonts/8BitOperator/8bitOperatorPlus8-Regular.ttf" id="3_1g8jr"]
[ext_resource type="PackedScene" uid="uid://d1jwu43vb0643" path="res://scenes/enemies/mobile/shrub_demon.tscn" id="3_wb0q5"]
[ext_resource type="Script" uid="uid://ddbojoc57qcsg" path="res://scripts/ui/menu_shrub_demon.gd" id="4_q85j6"]
[ext_resource type="PackedScene" uid="uid://dd1bw4k33fgn0" path="res://scenes/ui/credits.tscn" id="5_x2yvf"]
[ext_resource type="PackedScene" uid="uid://dpyjde1r6kiri" path="res://scenes/ui/create_new_save.tscn" id="6_uhagc"]
[ext_resource type="PackedScene" uid="uid://cjn6khha0alh0" path="res://scenes/ui/load_screen.tscn" id="7_btxxm"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m1kxf")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
modulate = Color(0.851769, 0.8517689, 0.85176885, 1)
z_index = -1
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAD/////AAAAAAAAAAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAD//wkAAAAAAAAAAAD//woAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAABAP//AAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAACAP//AAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAADAP//AAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAAAAAADAAoAAAAAAAAAAAAEAP//AAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAAAAAAAAAAFAP//AAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAGAP//AAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAAAAAAGAAoAAAAAAAAAAAAHAP//AAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAAAIAP//AAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAAAAAAJAP//AAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAKAP//AAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAoAAAAAAAAAAAALAP//AAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAALAAoAAAAAAAAAAAAMAP//AAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAAMAAoAAAAAAAAAAAANAP//AAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAANAAoAAAAAAAAAAAAOAP//AAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAPAP//AAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAAQAP//AAAAAAAAAAAQAAAAAAAAAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAAAAAAAAAAQAAQAAAAAAAAAAAAQAAUAAAAAAAAAAAAQAAYAAAAAAAAAAAAQAAcAAAAAAAAAAAAQAAgAAAAAAAAAAAAQAAkAAAAAAAAAAAAQAAoAAAAAAAAAAAARAP//AAAAAAAAAAARAAAAAAAAAAAAAAARAAEAAAAAAAAAAAARAAIAAAAAAAAAAAARAAMAAAAAAAAAAAARAAQAAAAAAAAAAAARAAUAAAAAAAAAAAARAAYAAAAAAAAAAAARAAcAAAAAAAAAAAARAAgAAAAAAAAAAAARAAkAAAAAAAAAAAARAAoAAAAAAAAAAAASAP//AAAAAAAAAAASAAAAAAAAAAAAAAASAAEAAAAAAAAAAAASAAIAAAAAAAAAAAASAAMAAAAAAAAAAAASAAQAAAAAAAAAAAASAAUAAAAAAAAAAAASAAYAAAAAAAAAAAASAAcAAAAAAAAAAAASAAgAAAAAAAAAAAASAAkAAAAAAAAAAAASAAoAAAAAAAAAAAA=")
tile_set = ExtResource("1_sl1te")

[node name="Sprites" type="Node2D" parent="."]
y_sort_enabled = true

[node name="ShrubDemon" parent="Sprites" instance=ExtResource("3_wb0q5")]
scale = Vector2(4, 4)
collision_mask = 0
script = ExtResource("4_q85j6")

[node name="ShrubDemon2" parent="Sprites" instance=ExtResource("3_wb0q5")]
scale = Vector2(4, 4)
collision_mask = 0
script = ExtResource("4_q85j6")

[node name="ShrubDemon3" parent="Sprites" instance=ExtResource("3_wb0q5")]
scale = Vector2(4, 4)
collision_mask = 0
script = ExtResource("4_q85j6")

[node name="ShrubDemon4" parent="Sprites" instance=ExtResource("3_wb0q5")]
scale = Vector2(4, 4)
collision_mask = 0
script = ExtResource("4_q85j6")

[node name="Title" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(450, 150.99998)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_fe2o3")

[node name="SubtitleParent" type="Node2D" parent="Title"]
position = Vector2(479.99988, 99.99997)

[node name="Subtitle" type="Label" parent="Title/SubtitleParent"]
offset_left = -303.74994
offset_top = 35.00004
offset_right = 346.25006
offset_bottom = 70.00004
rotation = -0.17453292
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0.9999998, 0.52183855, 0.18693665, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = ExtResource("3_1g8jr")
theme_override_font_sizes/font_size = 48
text = "The Quest for a Swapdeck"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Shadow" type="Sprite2D" parent="Title"]
modulate = Color(0, 0, 0, 0.5019608)
z_index = -1
position = Vector2(7.5000305, 10.000015)
texture = ExtResource("2_fe2o3")

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 259.0
offset_right = 392.0
offset_bottom = 587.0
theme_override_constants/separation = 12

[node name="Continue" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.84705883, 0, 1)
theme_override_fonts/font = ExtResource("3_1g8jr")
theme_override_font_sizes/font_size = 32
text = " > Continue"
alignment = 0

[node name="Load" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.84705883, 0, 1)
theme_override_fonts/font = ExtResource("3_1g8jr")
theme_override_font_sizes/font_size = 32
text = " > Load Game"
alignment = 0

[node name="NewGame" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.84705883, 0, 1)
theme_override_fonts/font = ExtResource("3_1g8jr")
theme_override_font_sizes/font_size = 32
text = " > New Game"
alignment = 0

[node name="Credits" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.84705883, 0, 1)
theme_override_fonts/font = ExtResource("3_1g8jr")
theme_override_font_sizes/font_size = 32
text = " > Credits"
alignment = 0

[node name="Quit" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.84705883, 0, 1)
theme_override_fonts/font = ExtResource("3_1g8jr")
theme_override_font_sizes/font_size = 32
text = " > Quit"
alignment = 0

[node name="Credits" parent="." instance=ExtResource("5_x2yvf")]
visible = false
z_index = 2
layout_mode = 1

[node name="CreateNewSave" parent="." instance=ExtResource("6_uhagc")]
visible = false
z_index = 2
layout_mode = 1

[node name="LoadScreen" parent="." instance=ExtResource("7_btxxm")]
visible = false
z_index = 2
layout_mode = 1

[connection signal="pressed" from="Buttons/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Buttons/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Buttons/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Buttons/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
